--- a/src/index.css
+++ b/src/index.css
@@ -3,38 +3,42 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  
+  /* -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; */
   padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+/* code {
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+
+}; */
 
 .left-section{
+  border-right: 2px solid lightgrey;
   display: flex;
-  flex-direction: column;
-  
+
  
+  flex-direction: column;
   height: 100vh;
-  width: 33%;
+  width: 23%;
   
  
 }
 
 .left-section img{
-  width: 35px;
-  height: 35px;
-  margin-left: 45px;
+  width: 65px;
+  height: 65px;
+  margin-left: 25px;
  
 
 }
 
 .left-item{
+ 
   display: flex;
   align-items: center;
+  margin-left: 25px;
   
   padding:20px;
 }
@@ -43,3 +47,99 @@ code {
   font-size: 20px;
   margin-left: 15px;
 }
+
+.tweet-btn{
+  background-color: #1DA1F2;
+  width:300px;
+  height: 50px;
+   margin-left: 35px;
+   border-radius: 33px;
+   border-style: none;
+   color:white;
+   font-size: 20px;
+
+  
+}
+.tweet-btn:hover{
+  background-color: #6699cc;
+
+}
+
+.home-page{
+  display: flex;
+  flex-direction: row;
+}
+
+.tweet-header{
+  border:2px solid lightgray;
+  border-left: 0px;
+  height: 7%;
+}
+
+.tweet-title{
+  margin: 15px;
+  width: 100vh;
+  height: 5%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.tweet-input{
+  margin-left: 185px;
+  width:100vh;
+  height: 80px;
+  border-style: none;
+}
+
+.tweet-imports{
+  display: flex;
+  flex-direction: row;
+  margin-left: 185px;
+}
+
+.write-btn{
+  background-color: #1DA1F2;
+  width:100px;
+  height: 50px;
+   margin-left: 35px;
+   border-radius: 33px;
+   border-style: none;
+   color:white;
+   font-size: 20px;
+}
+
+.tweet-options{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.writetweet-section{
+  border-bottom: 10px solid #E6E6E3;
+}
+
+
+
+.blue-divider{
+  height: 100vh;
+  
+  background-color: #1DA1F2;
+  width: 20%;
+}
+.enter-btn{
+  width:60px;
+  height: 30px;
+  border-radius: 20px;
+
+}
+
+.login-info{
+  background-color: rebeccapurple;
+  width: 100px;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+}
+
